Safer handling of List/Set as method returns